# ros2_m1_native

./: .gitignore  AGENTS.md  DEVELOPER_GUIDE.md  FRESH_START_PLAN.md  README.md  install_guide.md  pyproject.toml  ros2.lock.repos  ros2.repos  third_party.repos
patches/: foxglove_bridge_macos_sdk.patch  geometric_shapes_assimp_target_compat.patch  glew_cmake_macos_no_x11.patch  image_view_boost_include_dirs.patch  moveit2_benchmarks_boost_timer_deprecated_guard.patch  moveit2_cached_ik_random_shuffle_compat.patch  moveit2_distance_map_key_const_compat.patch  moveit2_ompl_openmp_optional.patch  moveit2_perception_openmp_cxx_only.patch  moveit2_perception_openmp_subdirs_optional.patch  moveit2_pilz_planning_context_loader_link_fix.patch  navigation2_clang_template_and_callback_compat.patch  navigation2_constrained_smoother_ceres_config.patch  navigation2_costmap_filter_override.patch  navigation2_graphicsmagick_libcpp_compat.patch  navigation2_mppi_controller_clang_flags.patch  navigation2_odom_callback_const.patch  navigation2_smac_planner_openmp_optional.patch  navigation2_system_tests_gazebo_optional_when_not_testing.patch  perception_pcl_minimal_pcl_components.patch  random_numbers_cxx14_boost_compat.patch  realtime_tools_macos_compat.patch  ros2_control_controller_manager_backward_ros_optional.patch  ros2_qt_gui_cpp_optional_bindings.patch  ros2_rviz_ogre_vendor_disable_meshlod.patch  ros2_rviz_ogre_vendor_disable_pugixml_consumers.patch  ros2_rviz_ogre_vendor_patch_idempotent.patch  ros2_rviz_ogre_vendor_sdkroot.patch  ros2_rviz_ogre_vendor_xcrun.patch  (+4 more)
(+13 files in other folders)
